# py-dev-init

./: .bashrc  .gitattributes  .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
docs/: apireference.rst  changelog.rst  conf.py  development.rst  index.rst  requirements.txt  usage.rst
py_dev_init/: __init__.py
scripts/: docs_helper.py
