[tool.pdm]
# handle version dynamic
version = {source = "file", path = "py_dev_init/__init__.py"}

[project.optional-dependencies]
# make pip able to install the dev
# $ pip install .[dev]
# we don't want to use PEP 582 or virtualenv
dev = [
    "Sphinx>=5.3.0",
    "black>=22.12.0",
    "flake8>=6.0.0",
    "flake8-bugbear>=22.12.6",
    "flake8-quotes>=3.3.1",
    "rinohtype>=0.5.4",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-rtd-theme>=1.1.1",
    "sphinxcontrib-autoprogram>=0.1.7",
    "docs-helper>=0.0.9",
    "pytest>=7.2.0",
    "sphinx-copybutton>=0.5.1",
]

[project]
authors = [{name = "Viktor Freiman", email = "freiman.viktor@gmail.com"}]
dependencies = ["requests>=2.28.1"]
description = "Kickstart repo, change this"
dynamic = ["version"]
license = {text = "MIT"}
name = "py-dev-init"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
ignore = ["ANN101", "ANN201", "D100", "D102", "D103", "D203", "D205", "D213", "D417", "E501", "ERA001", "FBT", "G004", "N813", "RET505", "T201", "TRY003"]
select = ["ALL"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"docs/conf.py" = ["INP001"]
