[tool.pdm]
# handle version dynamic
version = {source = "file", path = "py_dev_init/__init__.py"}

[project.optional-dependencies]
# make pip able to install the dev
# $ pip install .[dev]
# we don't want to use PEP 582 or virtualenv
dev = [
    "black",
    "docs-helper",
    "pytest",
    "rinohtype",
    "ruff",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "Sphinx",
    "sphinxcontrib-autoprogram",
    "sphinxcontrib.kroki",
]

[project]
authors = [{name = "Viktor Freiman", email = "freiman.viktor@gmail.com"}]
dependencies = ["requests"]
description = "Kickstart repo, change this"
dynamic = ["version"]
license = {text = "MIT"}
name = "py-dev-init"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
ignore = ["ANN101", "ANN201", "D100", "D102", "D103", "D203", "D205", "D213", "D417", "E501", "ERA001", "FBT", "G004", "N813", "RET505", "T201", "TRY003"]
select = ["ALL"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"docs/conf.py" = ["INP001"]
